Getting stated page is better

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -144,6 +144,7 @@
             <div class="fb-follow" data-href="{{site.facebook.profileUrl}}" data-layout="button_count" data-show-faces="false"></div>
           </li>
         {% endif %}
+          <li><script async defer src="http://slack.redux.io/slackin.js"></script></li>
         </ul>
       </div>
 
