--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -69,7 +69,7 @@
 
 <div class="bs-docs-masthead" id="content">
     <div class="container">
-        <h1 class="home-title">{{site.name}}</h1>
+        <img src="{{site.github.url}}/assets/images/logo.png">
         <p class="lead">{{page.description}}</p>
         <p class="lead">
             <a href="{{site.downloadUrl}}" class="btn btn-outline-inverse btn-lg">Download</a>
@@ -125,6 +125,7 @@
                     <div class="fb-follow" data-href="{{site.facebook.profileUrl}}" data-layout="button_count" data-show-faces="false"></div>
                 </li>
                 {% endif %}
+                <li><script async defer src="http://slack.redux.io/slackin.js"></script></li>
             </ul>
         </div>
 
