--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -4,6 +4,15 @@
 //  font-size 30px;
 //}
 
+.navbar .site-name
+  width 186px
+  height 50px
+  background-image url(/top_logo.png)
+  background-repeat no-repeat
+  text-indent -9999px
+  overflow hidden
+  top -8px
+
 .toasted-container.compatibility-notification
   &.top-right
     right 4vw
