--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -13,6 +13,9 @@
   overflow hidden
   top -8px
 
+.home .hero h1
+  display none
+
 .toasted-container.compatibility-notification
   &.top-right
     right 4vw
