--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -4,17 +4,61 @@
 //  font-size 30px;
 //}
 
+ks-retina-query( media = all, density = 1 )
+  media = join( " ", media )
+  query = media + " and (-webkit-min-device-pixel-ratio: " + density + "), "
+  query += media + " and (min--moz-device-pixel-ratio: " + density + "), "
+  query += media + " and (-o-min-device-pixel-ratio: " + density + "/1), "
+  query += media + " and (min-device-pixel-ratio: " + density + "), "
+  query += media + " and (min-resolution: " + ceil( density * 96 ) + "dpi), "
+  query += media + " and (min-resolution: " + density + "dppx)"
+  @media query
+    {block}
+
+retina-query = ks-retina-query unless ks-no-conflict
+ks-hidpi-query = ks-retina-query unless ks-no-conflict
+hidpi-query = ks-hidpi-query unless ks-no-conflict
+
+ks-retina-image( img-src, size = false, suffix = "@2x" )
+  ext = extname( img-src )
+  image-src = pathjoin( dirname( img-src ), basename( img-src, ext ) + ext )
+  retina-src = pathjoin( dirname( img-src ), basename( img-src, ext ) + suffix + ext )
+  unless size
+    size = image-size( img-src, true )
+    if size[ 0 ] == 0 && size[ 1 ] == 0
+      size = contain
+
+  background-image: url( image-src )
+  +ks-retina-query( only screen, 1.3 )
+    background-image: url( retina-src )
+    background-size: size
+
+retina-image = ks-retina-image unless ks-no-conflict
+ks-hidpi-image = ks-retina-image unless ks-no-conflict
+hidpi-image = ks-hidpi-image unless ks-no-conflict
+
+
+
+
+
 .navbar .site-name
   width 186px
   height 50px
-  background-image url(/top_logo.png)
-  background-repeat no-repeat
+  ks-retina-image( '/top_logo.png', 186px 50px, "-2x" )
+  //background red
   text-indent -9999px
   overflow hidden
   top -8px
 
 .home .hero h1
   display none
+.home .hero img
+  width 632px
+  height 171px
+  ks-retina-image( '/redux.png', 632px 171px, "-2x" )
+  box-sizing:border-box;
+  padding-left: 632px;
+  //border 1px solid red
 
 .toasted-container.compatibility-notification
   &.top-right
