--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -1,3 +1,12 @@
 // placeholder for test, dont't remove it.
 
 $accentColor = #009ec3
+// responsive layouts
+$navbarHeight = 3.75rem;
+$sidebarWidth = 20rem;
+$contentWidth = 60rem;
+
+// responsive breakpoints
+$MQNarrow = 60rem;
+$MQMobile = 45rem;
+$MQMobileNarrow = 26.25rem;
