--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -77,6 +77,14 @@ hidpi-image = ks-hidpi-image unless ks-no-conflict
     .toasted
       width 80vw
 
-p {
-  margin-top: 16px;
+
+.theme-default-content {
+  p {
+    margin-top: 16px;
+  }
+  ol, ul, dl {
+    margin: 16px 0 !important;
+  }
+
 }
+
