--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -88,3 +88,8 @@ hidpi-image = ks-hidpi-image unless ks-no-conflict
 
 }
 
+.table-of-contents  {
+  ol, ul, dl {
+    margin-top: 0 !important;
+  }
+}
