--- a/docs/.vuepress/components/builder/style.css
+++ b/docs/.vuepress/components/builder/style.css
@@ -330,8 +330,8 @@ fieldset {
     -ms-flex-positive: 1;
     flex-grow: 1;
     -ms-flex-preferred-size: 69%;
-    flex-basis: 69%;
-    max-width: 69%;
+    flex-basis: 64%;
+    max-width: 64%;
 }
 
 .seventy pre {
@@ -348,8 +348,8 @@ fieldset {
     -ms-flex-positive: 1;
     flex-grow: 1;
     -ms-flex-preferred-size: 30%;
-    flex-basis: 30%;
-    max-width: 30%;
+    flex-basis: 35%;
+    max-width: 35%;
 }
 
 @media (max-width: 816px) {
@@ -438,3 +438,172 @@ fieldset {
     width: 100%;
 }
 
+.field-custom-object fieldset {
+    border: 1px solid #eee;
+    padding: .5rem 1rem;
+}
+
+.field-custom-object fieldset fieldset {
+    border: none;
+    padding: 0;
+}
+
+.field-wrap {
+    width: 100%;
+    display: block;
+}
+.field-wrap div {
+    width: 100%;
+}
+
+.field-switch .field-wrap {
+    float: right;
+    width: auto;
+}
+
+
+
+
+.vue-form-generator .field-radios .radio-list label input[type=radio] {
+    display: none;
+}
+
+.field-custom-object .field-radios .radio-list label {
+    background: #eee;
+    margin: 0 .5em 0 0;
+    display: inline-block;
+    padding: 0.25rem 0.5rem;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    border-radius: 0.2rem;
+    cursor: pointer;
+}
+
+.field-custom-object .field-radios .radio-list label:hover {
+    background: #ccc;
+}
+
+.field-custom-object .field-radios .radio-list .is-checked, .field-custom-object .field-radios .radio-list label.is-checked:hover {
+    color: #fff;
+    background-color: #17a2b8;
+    border-color: #17a2b8;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.vue-form-generator .field-switch .field-wrap label {
+    position: relative;
+    display: block;
+    width: 80px;
+    height: 30px;
+    padding: 0;
+    margin: 0 10px 10px 0;
+    border-radius: 15px;
+    box-shadow: inset 0 -1px #fff, inset 0 1px 1px rgba(0, 0, 0, .05);
+    cursor: pointer
+}
+
+.vue-form-generator .field-switch input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0
+}
+
+.vue-form-generator .field-switch .label {
+    position: relative;
+    display: block;
+    height: inherit;
+    font-size: 10px;
+    text-transform: uppercase;
+    background: #eceeef;
+    border-radius: inherit;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .12), inset 0 0 2px rgba(0, 0, 0, .15)
+}
+
+.vue-form-generator .field-switch .label:after, .vue-form-generator .field-switch .label:before {
+    position: absolute;
+    top: 50%;
+    margin-top: -.5em;
+    line-height: 1;
+    -webkit-transition: inherit;
+    -moz-transition: inherit;
+    -o-transition: inherit;
+    transition: inherit
+}
+
+.vue-form-generator .field-switch .label:before {
+    content: attr(data-off);
+    right: 11px;
+    color: #aaa;
+    text-shadow: 0 1px hsla(0, 0%, 100%, .5)
+}
+
+.vue-form-generator .field-switch .label:after {
+    content: attr(data-on);
+    left: 11px;
+    color: #fff;
+    text-shadow: 0 1px rgba(0, 0, 0, .2);
+    opacity: 0
+}
+
+.vue-form-generator .field-switch input:checked ~ .label {
+    background: #6dce6b;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .15), inset 0 0 3px rgba(0, 0, 0, .2)
+}
+
+.vue-form-generator .field-switch input:checked ~ .label:before {
+    opacity: 0
+}
+
+.vue-form-generator .field-switch input:checked ~ .label:after {
+    opacity: 1
+}
+
+.vue-form-generator .field-switch .handle {
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    width: 28px;
+    height: 28px;
+    background: linear-gradient(180deg, #fff 40%, #f0f0f0);
+    background-image: -webkit-linear-gradient(top, #fff 40%, #f0f0f0);
+    border-radius: 100%;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, .2)
+}
+
+.vue-form-generator .field-switch .handle:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -6px 0 0 -6px;
+    width: 12px;
+    height: 12px;
+    background: linear-gradient(180deg, #eee, #fff);
+    background-image: -webkit-linear-gradient(top, #eee, #fff);
+    border-radius: 6px;
+    box-shadow: inset 0 1px rgba(0, 0, 0, .02)
+}
+
+.vue-form-generator .field-switch input:checked ~ .handle {
+    left: 91px;
+    left: calc(100% - 29px);
+    box-shadow: -1px 1px 5px rgba(0, 0, 0, .2)
+}
+
+.vue-form-generator .field-switch .handle, .vue-form-generator .field-switch .label {
+    transition: all .3s ease
+}
