Few more styles.

--- a/docs/.vuepress/styles/builder.styl
+++ b/docs/.vuepress/styles/builder.styl
@@ -627,16 +627,21 @@ fieldset {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  padding-right: 25px;
+  padding-right: 22px;
 }
 
 .field-array-group input[type=button] {
-  height: 29px;
+  height: 30px;
   /* removes the box from DOM */
   float: right;
   /* alternative to negative margin-top,
   which seems to hide my button behind the input */
   position: relative;
   top: 0px;
-  margin-top: -33.5px;
+  background-color: #dc3545;
+  border: none;
+  color: #fff;
+  height: 30px;
+  margin-top: -34px;
+
 }
