fix misc, but tricky bugs

--- a/docs/.vuepress/styles/builder.styl
+++ b/docs/.vuepress/styles/builder.styl
@@ -129,6 +129,11 @@
   cursor: not-allowed
 }
 
+.vue-form-generator .field-array .field-wrap .input-group > input[type=text] {
+  width: 85%;
+  margin-right: 5%;  
+}
+
 .vue-form-generator .hint {
   font-style: italic;
   font-size: .8em
