css works, even better approach for tabs

--- a/docs/.vuepress/styles/builder.styl
+++ b/docs/.vuepress/styles/builder.styl
@@ -650,3 +650,22 @@ fieldset {
   margin-top: -34px;
 
 }
+
+/* tab structure styling*/
+.panel-body .card.no-margin {
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-bottom: -15px;
+}
+
+.panel-body .card-header {
+  padding: 0px;
+}
+
+.panel-body .card-header .card-header-tabs {
+  margin: 0px !important;
+}
+
+.panel-body .card-header .card-header-tabs a {
+  text-decoration: none;
+}
