--- a/docs/.vuepress/styles/builder.styl
+++ b/docs/.vuepress/styles/builder.styl
@@ -322,7 +322,6 @@ fieldset {
   background-color: #009ec3;
   padding: 0.8rem 1.6rem;
   border-color: #ddd;
-  cursor: pointer;
   border-bottom: 1px solid transparent;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
@@ -415,8 +414,9 @@ fieldset {
 
 .redux-builder .card {
   border-top: 0;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+  border-left: 0;
+  border-right: 0;
+  border-radius: 0;
 }
 
 .redux-builder .heading button {
@@ -655,7 +655,7 @@ fieldset {
 .panel-body .card.no-margin {
   margin-left: -15px;
   margin-right: -15px;
-  margin-bottom: 15px;
+  margin-bottom:15px;
 }
 
 .panel-body .card-header {
